--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolt-expo-starter",
+  "name": "super-marubatsu-game",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
@@ -12,6 +12,7 @@
     "@expo-google-fonts/orbitron": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "52.0.33",
@@ -27,6 +28,7 @@
     "expo-status-bar": "^2.0.1",
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "^4.0.7",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "^14.0.2",
     "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
