アプリの設定にオーナー情報を追加し、ゲーム画面でプレイヤーアイコンを描画するユーティリティ関数を追加。タイトル画面のデザインを改善し、アイコンをタイトルに組み込むスタイルを追加。

--- a/app.json
+++ b/app.json
@@ -36,6 +36,7 @@
     "updates": {
       "url": "https://u.expo.dev/cc8f1abf-7310-44b6-a995-2676056147d7"
     },
-    "android": {}
+    "android": {},
+    "owner": "nabettu"
   }
 }
